--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "aioftp>=0.25.1",
     "ruff>=0.11.8",
+    "tqdm>=4.67.1",
 ]
 
 [tool.ruff]
-line-length = 79
+line-length = 120
