--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aioftp>=0.25.1",
+    "pyftpdlib>=2.0.1",
     "python-dotenv>=1.1.0",
     "ruff>=0.11.8",
     "sendgrid>=6.12.0",
